# CoMe

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: detect-config.sh  devcontainer.json
.githooks/: post-checkout.sh
Network/map_anything/: __init__.py
config/: bench.yaml  evaluate.yaml  infer.yaml  train.yaml
config/dataset/: custom_camera.yaml  custom_image.yaml  custom_video.yaml  dtu_mvs.yaml  fake_input.yaml  tartanair_v1.yaml
config/model/: co_me_direct_vggt_3x3.yaml  co_me_fused_da3_3x3_l8.yaml  co_me_fused_ma_3x3.yaml  co_me_fused_pi3_3x3.yaml  co_me_fused_pi3x_3x3.yaml  co_me_fused_vggt_3x3.yaml  da3.yaml  fastvggt.yaml  ma.yaml  pi3.yaml  pi3x.yaml  to_me_direct_vggt_r05.yaml  vggt.yaml  vggt_star.yaml
config/optimizer/: adamw.yaml
config/render/: blender.yaml  empty.yaml  image.yaml  rerun.yaml  rerun_video.yaml  save_ply.yaml  save_raw.yaml
config/scheduler/: cosine_annealing.yaml
docker/: Dockerfile  Dockerfile.test-type  compose.sh  docker-compose-type.yaml  docker-compose.yaml  requirements.txt
docker/scripts/: install_cv2.sh  install_gtsam.sh  install_zedsdk.sh
output/confidence_distill/da3/20260324_181959/step_02000/: checkpoint.pth  config.json
output/confidence_distill/ma/20260325_052534/step_02000/: checkpoint.pth  config.json
output/confidence_distill/pi3/20260324_172756/step_02000/: checkpoint.pth  config.json
output/confidence_distill/pi3x/20260324_173744/step_02000/: checkpoint.pth  config.json
output/confidence_distill/vggt/20260324_172742/step_02000/: checkpoint.pth  config.json
src/: bench.py  evaluate.py  infer.py  train.py
src/accelerate/: __init__.py
src/accelerate/common/: confidence_predictor.py  qkv.py
src/accelerate/da3/: fused.py
src/accelerate/da3/module/: __init__.py  attention.py  block.py
src/accelerate/ma/: fused.py
src/accelerate/ma/module/: __init__.py  attention.py  block.py
src/accelerate/pi3/: __init__.py  fused.py
src/accelerate/pi3/module/: __init__.py  attention.py  block.py
src/accelerate/token_merger/: co_me.py  co_me_2d.py  to_me.py
src/accelerate/vggt/: __init__.py  direct.py  fused.py
src/accelerate/vggt/module/: __init__.py  bias_attention.py  block.py  plain_attention.py
src/cuda_extension/: .gitignore  __init__.py  __init__.pyi
src/cuda_extension/co_me/: __init__.py  co_me_cuext.pyi  install.sh  setup.py
src/cuda_extension/co_me/include/: kernel_token_merge.h  kernel_token_merge_legacy.h
src/cuda_extension/co_me/src/: binding.cpp  kernel_token_merge.cu  kernerl_token_merge_legacy.cu
src/cuda_extension/flash_attn/: __init__.py  flash_api.cpp  flash_api.h  install.sh  setup.py
src/cuda_extension/flash_attn/src/: flash.h  flash_fwd_hdim128_bf16_causal_sm80.cu  flash_fwd_hdim128_bf16_sm80.cu  flash_fwd_hdim128_fp16_causal_sm80.cu  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_bf16_causal_sm80.cu  flash_fwd_hdim160_bf16_sm80.cu  flash_fwd_hdim160_fp16_causal_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_bf16_causal_sm80.cu  flash_fwd_hdim192_bf16_sm80.cu  flash_fwd_hdim192_fp16_causal_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim256_bf16_causal_sm80.cu  flash_fwd_hdim256_bf16_sm80.cu  flash_fwd_hdim256_fp16_causal_sm80.cu  flash_fwd_hdim256_fp16_sm80.cu  flash_fwd_hdim32_bf16_causal_sm80.cu  flash_fwd_hdim32_bf16_sm80.cu  flash_fwd_hdim32_fp16_causal_sm80.cu  flash_fwd_hdim32_fp16_sm80.cu  flash_fwd_hdim64_bf16_causal_sm80.cu  flash_fwd_hdim64_bf16_sm80.cu  flash_fwd_hdim64_fp16_causal_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu  flash_fwd_hdim96_bf16_causal_sm80.cu  flash_fwd_hdim96_bf16_sm80.cu  flash_fwd_hdim96_fp16_causal_sm80.cu  flash_fwd_hdim96_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_split_hdim128_bf16_causal_sm80.cu  flash_fwd_split_hdim128_bf16_sm80.cu  flash_fwd_split_hdim128_fp16_causal_sm80.cu  flash_fwd_split_hdim128_fp16_sm80.cu  flash_fwd_split_hdim160_bf16_causal_sm80.cu  flash_fwd_split_hdim160_bf16_sm80.cu  flash_fwd_split_hdim160_fp16_causal_sm80.cu  flash_fwd_split_hdim160_fp16_sm80.cu  flash_fwd_split_hdim192_bf16_causal_sm80.cu  flash_fwd_split_hdim192_bf16_sm80.cu  (+19 more)
src/cuda_extension/zed_loader/: CMakeLists.txt  README.md  __init__.py  install.sh  pyproject.toml  setup.py  zed_loader.pyi
src/cuda_extension/zed_loader/include/zed_loader/: common.hpp  zed_loader.hpp
src/cuda_extension/zed_loader/python/: bindings.cpp
src/cuda_extension/zed_loader/src/: main.cpp  zed_loader.cpp
src/dataset/: custom_camera.py  custom_image.py  custom_video.py  dtu_mvs.py  fake_input.py  tartanair_v1.py
src/interface/: dataset.py  geometric_model.py  metric.py  render.py  token_merger.py
src/metrics/: __init__.py  depth.py
src/render/: __init__.py  blender.py  empty.py  image.py  plyfile.py  rerun.py  save_raw.py
src/utility/: diagnostic.py  feature.py  timer.py
test/auto_test/: test_convention_conversion.py  test_fake_input.py  test_flex_attention_bias.py  test_jagged_attention.py  test_jagged_suffix.py  test_mapanything_integration.py  test_timer.py  test_token_merge_2d.py  test_token_merge_cuda.py
test/benchmark/: bench_confidence.py  bench_flash_attn.py  bench_flash_attn_w_bias.py  bench_token_merge.py  profile_flash_attn.py  profile_token_merge.py
test/unit_test/: test_token_merge_func.py
tools/: dev.sh  docker-compose.user.yaml  docker-compose.user.yaml.template  feature.sh  setup.sh
tools/types/cv2/: Error.pyi  __init__.pyi  aruco.pyi  cuda.pyi  detail.pyi  fisheye.pyi  flann.pyi  ipp.pyi  load_config_py3.pyi  ml.pyi  ocl.pyi  ogl.pyi  parallel.pyi  samples.pyi  segmentation.pyi  videoio_registry.pyi
tools/types/cv2/gapi/: __init__.pyi  oak.pyi  onnx.pyi  streaming.pyi  video.pyi
tools/types/cv2/gapi/core/: __init__.pyi  cpu.pyi
tools/types/cv2/gapi/ie/: __init__.pyi  detail.pyi
tools/types/cv2/gapi/own/: __init__.pyi  detail.pyi
tools/types/cv2/gapi/render/: __init__.pyi  ocv.pyi
tools/types/cv2/mat_wrapper/: __init__.pyi
tools/types/cv2/misc/: __init__.pyi  version.pyi
tools/types/cv2/utils/: __init__.pyi  fs.pyi  nested.pyi
(+4 files in other folders)
